# wt_event_handler

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api_requirements.md  docker-compose.yml  recent.json  recent.txt  wt_event_handler_api.postman_collection.json
assets/: Dockerfile  db_blueprint.sqlite  example_discord_token.json  recent.json  setup_db.sql  sources.json
docker/: Dockerfile
src/: coub.rs  embed.rs  error.rs  example_scraper.rs  fetch_loop.rs  forum_news.rs  logging.rs  main.rs  menu_options.rs  recent_name_to_index.rs  statistics.rs  timeout.rs  webhook_handler.rs  webhooks.rs  wt_news.rs
src/api/: core.rs  data.rs  database.rs  database_queries.rs  db.rs  db_error.rs  endpoints.rs  error.rs  mod.rs
src/json/: mod.rs  recent.rs  sources.rs  sources_def.rs  webhooks.rs
src/json_to_structs/: mod.rs  recent.rs  webhooks.rs
src/scrapers/: example_scraper.rs  forum_news.rs  forum_news_project_news.rs  forum_news_updates_information.rs  forum_scraper.rs  html_processing.rs  main_news.rs  mod.rs  scrape_meta.rs  wt_changelog.rs  wt_news.rs
src/scrapers/scraper_resources/: html_util.rs  mod.rs  resources.rs
