[package]
name = "wt_event_handler"
version = "0.1.2"
edition = "2021"
rust-version = "1.62"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = true
incremental = true
codegen-units = 4


[dependencies]
scraper = "^0.13.0"
reqwest = "^0.11.11"
tokio = { version = "^1.20.1", features = ['full'] }
serenity = "^0.11.5"
serde = "^1.0.144"
serde_json = "^1.0.85"
chrono = "^0.4.22"
lazy_static = "^1.4.0"
thiserror = "^1.0.33"

actix-cors = "^0.6.1"
actix-web = "^4.1.0"

tracing = "^0.1.36"
tracing-appender = "^0.2.2"
tracing-subscriber = {version  = "^0.3.15", features = ["tracing-log", "env-filter", "fmt", "std"]}

[dependencies.log4rs]
version = "^1.1.1"
features = ["file_appender"]

