[package]
name = "wt_event_handler"
version = "0.1.2"
edition = "2021"
rust-version = "1.64"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Optimized for decent speed yet good compile times
[profile.dev]
opt-level = 0
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

# I prefer having overflow checks, as it is crucial to validate integers even in production
[profile.release]
lto = true
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = true

[dependencies]
scraper = "^0.13.0"
reqwest = "^0.11.11"
tokio = { version = "^1.20.1", features = ["rt-multi-thread", "signal"] }
serenity = "^0.11.5"
serde = "^1.0.144"
serde_json = "^1.0.85"
chrono = "^0.4.22"
lazy_static = "^1.4.0"
thiserror = "^1.0.33"
rand = "^0.8.5"

tracing = "^0.1.36"
tracing-appender = "^0.2.2"
tracing-subscriber = {version  = "^0.3.15", features = ["tracing-log", "env-filter", "fmt", "std"]}
humantime = "2.1.0"
uptime_kuma_pusher = "0.3.0"
